[package]
name = "astro_save_editor_wasm"
version = "0.1.0"
authors = ["rdavis <ricky.c.davis.9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[dependencies]
wasm-bindgen = "0.2.45"
clang-sys = "1.0.3"
flate2 = { version = "1.0.19", features = ["zlib"], default-features = false }
hex = "0.4.2"
byteorder = "1.3.4"


[lib]
crate-type =["cdylib"]